partial/force-app/main/default/objects/Viewing__c/Viewing__c.object-meta.xml
<CustomObject>
    <description>This Object has been created to capture the viewings details.</description>
    <label>Viewing</label>
    <nameField>
        <label>Viewing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viewings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>