partial/force-app/main/default/objects/Viewing__c/fields/Actual_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Date__c</fullName>
    <label>Actual Visit Date</label>
    <type>Date</type>
</CustomField>