partial/force-app/main/default/objects/Viewing__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields has been created to capture Agent details</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Viewings</relationshipName>
    <type>Lookup</type>
</CustomField>