partial/force-app/main/default/objects/Viewing__c/fields/Scheduled_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Visit_Date__c</fullName>
    <label>Scheduled Visit Date</label>
    <type>Date</type>
</CustomField>