partial/force-app/main/default/objects/Viewing__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <label>Visit Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9 AM - 12 PM</fullName>
            </value>
            <value>
                <fullName>12 PM - 2 PM</fullName>
            </value>
            <value>
                <fullName>4 PM - 7 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>