partial/force-app/main/default/objects/Viewing__c/fields/Visitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been created to lookup the Account.</description>
    <label>Visitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Viewings</relationshipLabel>
    <relationshipName>Viewings</relationshipName>
    <type>Lookup</type>
</CustomField>