partial/force-app/main/default/objects/Viewing__c/fields/Visitor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Visitor_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Viewings</relationshipLabel>
    <relationshipName>Viewings</relationshipName>
    <type>Lookup</type>
</CustomField>